[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["ubiratan.f.soares@gmail.com"]
description = "An opinionated way to kick-off CLI apps powered by Rust"
repository = "https://github.com/dotanuki-labs/nano-ledger"
homepage = "https://github.com/dotanuki-labs/nano-ledger"
documentation = "https://github.com/dotanuki-labs/nano-ledger"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[workspace.dependencies]
nano-ledger = { path = "crates/nano-ledger" }
xtasks = { path = "crates/xtasks" }

anyhow = "1.0.82"
clap = "4.5.4"
xshell = "0.2.6"
walkdir = "2.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"]}
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tower = "0.5.2"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }


[profile.release]
strip = true
lto = true
codegen-units = 1
