[package]
name = "nano-ledger"
description = "A simple double-entry bookkeeping financial system for demo purposes "
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
